<resources>
    <string name="app_name">RolePlayBanking</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="lbl_fragment_account_selection">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="balance">Balance</string>
    <string name="empty_balance">No money found</string>
    <string name="sender">Sender</string>
    <string name="unknown_time">Unknown Time</string>
    <string name="recipient">Recipient</string>
    <string name="send">Send</string>
    <string name="amount">Amount</string>
    <string name="current_balance">Current Balance</string>
    <string name="new_game">New Game</string>
    <string name="new_account">New Account</string>
    <string name="game_name">Game-Name</string>
    <string name="account_name">Account-Name</string>
    <string name="create_account">Create Account</string>
    <string name="default_balance">Default Balance</string>
    <string name="create_a_new_game">Create as a new Game</string>
    <string name="your_accounts">Your Accounts</string>
    <string name="create_a_new_transaction">Create a new Transaction</string>
    <string name="new_transaction">New Transaction</string>
    <string name="select_a_recipient">Type in a Name</string>
    <string name="error_transaction_amount_null">Amount must not be empty</string>
    <string name="error_transaction_amount_invalid">Amount must be smaller than your balance and greater than 0</string>
    <string name="error_account_game_null">Game-name must not be empty</string>
    <string name="error_account_name_null">Account-name must not be empty</string>
    <string name="error_account_game_exists">A game with this name already exists</string>
    <string name="error_account_balance_null">Default-Balance must not be empty</string>
    <string name="error_account_game_not_found">does not exist as a game</string>
    <string name="delete_account">Delete Account</string>
    <string name="recipient_not_found_error">Empfaenger not found</string>
    <string name="balance_for_admins">Admin</string>
    <string name="warning_title">Warning!</string>
    <string name="warning_text">Are you sure that you want to delete this account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_account_title">Add new Account</string>
</resources>