<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/secondary"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/surface"
        android:orientation="vertical"
        android:paddingLeft="5dp">

        <TextView
            android:id="@+id/senderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender"
            android:textColor="@color/onSurface"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipient"
            android:textAlignment="textEnd"
            android:textColor="@color/onSurface"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/surface"
        android:orientation="vertical"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/transactionAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAlignment="textEnd"
            android:textColor="@color/onSurface"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transactionTimestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown_time"
            android:textAlignment="textEnd"
            android:textColor="@color/onSurface"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>