<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.NewTransactionFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipient"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinRecipientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="Empty Account"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/spinRecipientList"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-62dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_balance"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtCurrentBalance"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/txtCurrentBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        tools:layout_editor_absoluteX="-60dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/balance_after_transaction"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtBalanceAfter"
        tools:layout_editor_absoluteX="-30dp" />

    <TextView
        android:id="@+id/txtBalanceAfter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        tools:layout_editor_absoluteX="-16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtTransferAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:layout_editor_absoluteX="13dp" />

    <!--    TODO: Add required elements-->
</androidx.constraintlayout.widget.ConstraintLayout>