<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/account_dock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.CreateNewActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:theme="@style/Theme.RolePlayBanking.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.RolePlayBanking.PopupOverlay" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtGameName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txInGameName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/surface"
                    android:hint="@string/game_name"
                    android:inputType="text"
                    android:textColor="@color/onSurface"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtAccountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtGameName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txInAccountName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/surface"
                    android:hint="@string/account_name"
                    android:inputType="text"
                    android:textColor="@color/onSurface"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/create_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary_variant"
                android:text="@string/create_account"
                android:textColor="@color/onSecondary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent" />

            <CheckBox
                android:id="@+id/cbIsNewGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/onBackground"
                android:text="@string/create_a_new_game"
                android:textColor="@color/onBackground"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="checkBoxPressed"
                app:layout_constraintTop_toBottomOf="@+id/txtAccountName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtDefaultBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/cbIsNewGame"
                tools:layout_editor_absoluteX="101dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txInDefaultBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/surface"
                    android:hint="@string/default_balance"
                    android:inputType="number"
                    android:textColor="@color/onSurface"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>